# textweight

./: .gitignore  README.md  build.sh  clean.sh  pyproject.toml
stub/textweight/: __init__.pyi  constants.pyi  scoring.pyi  validation_utils.pyi
stub/textweight/common_types/: __init__.pyi
stub/textweight/maths/: functions.pyi  vector.pyi
stub/textweight/similarity/: __init__.pyi  combo_similarity.pyi  jaro_winkler.pyi  keyboard_distance.pyi  levenshtein.pyi
test/: test_combo.py  test_jaro_winkler.py  test_keyboard_distance.py  test_levenshtein.py
textweight/: __init__.py  constants.py  scoring.py  validation_utils.py
textweight/common_types/: __init__.py
textweight/maths/: functions.py  vector.py
textweight/similarity/: __init__.py  combo_similarity.py  jaro_winkler.py  keyboard_distance.py  levenshtein.py
textweight/structures/: scored.py
